@@ -1,0 +1,90 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<!-- Smalltalk mode, by Marcio Marchini mqm@magma.ca -->
+
+<MODE>
+	<PROPS>
+		<PROPERTY NAME="commentStart" VALUE="&quot;" />
+		<PROPERTY NAME="commentEnd" VALUE="&quot;" />
+		<PROPERTY NAME="indentOpenBrackets" VALUE="[" />
+		<PROPERTY NAME="indentCloseBrackets" VALUE="]" />
+
+	</PROPS>
+	<RULES ESCAPE="\" IGNORE_CASE="FALSE" HIGHLIGHT_DIGITS="TRUE">
+		<!-- whitespace: (space and tab) -->
+		<WHITESPACE> </WHITESPACE>
+		<WHITESPACE>	</WHITESPACE>
+
+		<!-- Standard literals -->
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="FALSE">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+
+		<SPAN TYPE="COMMENT1">
+			<BEGIN>"</BEGIN>
+			<END>"</END>
+		</SPAN>
+
+		<SEQ TYPE="NULL">)</SEQ>
+		<SEQ TYPE="NULL">(</SEQ>
+		<SEQ TYPE="NULL">]</SEQ>
+		<SEQ TYPE="NULL">[</SEQ>
+		<SEQ TYPE="NULL">.</SEQ>
+		<SEQ TYPE="NULL">,</SEQ>
+		<SEQ TYPE="NULL">;</SEQ>
+		<SEQ TYPE="NULL">^</SEQ>
+		<SEQ TYPE="OPERATOR">:=</SEQ>
+		<SEQ TYPE="OPERATOR">_</SEQ>
+		<SEQ TYPE="OPERATOR">=</SEQ>
+		<SEQ TYPE="OPERATOR">==</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;=</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;=</SEQ>
+		<SEQ TYPE="OPERATOR">+</SEQ>
+		<SEQ TYPE="OPERATOR">-</SEQ>
+		<SEQ TYPE="OPERATOR">/</SEQ>
+		<SEQ TYPE="OPERATOR">*</SEQ>
+
+		<MARK_PREVIOUS TYPE="KEYWORD3" EXCLUDE_MATCH="TRUE">:</MARK_PREVIOUS>
+		<MARK_FOLLOWING TYPE="LABEL" EXCLUDE_MATCH="TRUE">#</MARK_FOLLOWING>
+		<MARK_FOLLOWING TYPE="LITERAL1" EXCLUDE_MATCH="TRUE">$</MARK_FOLLOWING>
+
+
+		<KEYWORDS IGNORE_CASE="FALSE">
+			<!-- Constants -->
+			<KEYWORD1>true</KEYWORD1>
+			<KEYWORD1>false</KEYWORD1>
+			<KEYWORD1>nil</KEYWORD1>
+
+			<!-- Reserved identifiers -->
+			<KEYWORD2>self</KEYWORD2>
+			<KEYWORD2>super</KEYWORD2>
+
+			<!-- not really keywords, but a different color works well-->
+			<KEYWORD3>isNil</KEYWORD3>
+			<KEYWORD3>not</KEYWORD3>
+			
+			<!-- not really -->
+			<LITERAL2>Smalltalk</LITERAL2>
+			<LITERAL2>Transcript</LITERAL2>
+			
+			<!-- base classes -->
+			<LITERAL2>Date</LITERAL2>
+			<LITERAL2>Time</LITERAL2>
+			<LITERAL2>Boolean</LITERAL2>
+			<LITERAL2>True</LITERAL2>
+			<LITERAL2>False</LITERAL2>
+			<LITERAL2>Character</LITERAL2>
+			<LITERAL2>String</LITERAL2>
+			<LITERAL2>Array</LITERAL2>
+			<LITERAL2>Symbol</LITERAL2>
+			<LITERAL2>Integer</LITERAL2>
+			<LITERAL2>Object</LITERAL2>
+
+		</KEYWORDS>
+	</RULES>
+</MODE>
