@@ -1,6 +1,9 @@
 /*
- * EnhancedButton.java - Check box button
- * Copyright (C) 1999, 2001 Slava Pestov
+ * EnhancedButton.java - Tool bar button
+ * :tabSize=8:indentSize=8:noTabs=false:
+ * :folding=explicit:collapseFolds=1:
+ *
+ * Copyright (C) 1999, 2001, 2002 Slava Pestov
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -19,23 +22,29 @@
 
 package org.gjt.sp.jedit.gui;
 
+//{{{ Imports
 import javax.swing.*;
 import java.awt.event.*;
 import java.awt.*;
 import org.gjt.sp.jedit.textarea.JEditTextArea;
 import org.gjt.sp.jedit.EditAction;
 import org.gjt.sp.jedit.GUIUtilities;
+//}}}
 
 public class EnhancedButton extends JButton
 {
+	//{{{ EnhancedButton constructor
 	public EnhancedButton(Icon icon, String toolTip, EditAction action)
 	{
 		super(icon);
+
+		this.action = action;
 
 		if(action != null)
 		{
 			setEnabled(true);
 			addActionListener(new EditAction.Wrapper(action));
+			addMouseListener(new MouseHandler());
 		}
 		else
 			setEnabled(false);
@@ -45,15 +54,35 @@ public class EnhancedButton extends JButton
 		Insets zeroInsets = new Insets(0,0,0,0);
 		setMargin(zeroInsets);
 		setRequestFocusEnabled(false);
-	}
+	} //}}}
 
+	//{{{ isFocusTraversable() method
 	public boolean isFocusTraversable()
 	{
 		return false;
-	}
+	} //}}}
 
-	public String getActionCommand()
+	//{{{ Private members
+	private EditAction action;
+	//}}}
+
+	//{{{ MouseHandler class
+	class MouseHandler extends MouseAdapter
 	{
-		return getModel().getActionCommand();
-	}
+		public void mouseEntered(MouseEvent evt)
+		{
+			String msg = action.getMouseOverText();
+			if(msg != null)
+			{
+				GUIUtilities.getView((Component)evt.getSource())
+					.getStatus().setMessage(msg);
+			}
+		}
+
+		public void mouseExited(MouseEvent evt)
+		{
+			GUIUtilities.getView((Component)evt.getSource())
+				.getStatus().setMessage(null);
+		}
+	} //}}}
 }
